--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="PlayerPanel.cpp">
       <Filter>Archivos de código fuente\HUD\Panels</Filter>
     </ClCompile>
+    <ClCompile Include="PanelUI.cpp">
+      <Filter>Archivos de código fuente\HUD\Panels</Filter>
+    </ClCompile>
     <ClCompile Include="AmmoViewer.cpp">
       <Filter>Archivos de código fuente\HUD\UIElements</Filter>
     </ClCompile>
@@ -205,8 +208,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
-    <ClCompile Include="ExplosiveBulletPool.cpp">
-      <Filter>Archivos de código fuente\Pools</Filter>
     <ClCompile Include="Game.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
@@ -227,15 +228,6 @@
     </ClCompile>
     <ClCompile Include="WeaponryViewer.cpp">
       <Filter>Archivos de código fuente\HUD\UIElements</Filter>
-    </ClCompile>
-    <ClCompile Include="ButtonUI.cpp">
-      <Filter>Archivos de código fuente\HUD\UIElements</Filter>
-    </ClCompile>
-    <ClCompile Include="PanelUI.cpp">
-      <Filter>Archivos de código fuente\HUD\UIElements</Filter>
-    </ClCompile>
-    <ClCompile Include="Bullet.cpp">
-      <Filter>Archivos de código\Objects\Bullets</Filter>
     </ClCompile>
     <ClCompile Include="BasicRifle.cpp">
       <Filter>Archivos de código fuente\Guns</Filter>
@@ -300,24 +292,6 @@
     <ClCompile Include="GroundEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
-    <ClCompile Include="ShopMenu.cpp">
-      <Filter>Archivos de código fuente\HUD\Shop</Filter>
-    </ClCompile>
-    <ClCompile Include="ShopItem.cpp">
-      <Filter>Archivos de código fuente\HUD\Shop</Filter>
-    </ClCompile>
-    <ClCompile Include="CatalogPanel.cpp">
-      <Filter>Archivos de código fuente\HUD\Shop</Filter>
-    </ClCompile>
-    <ClCompile Include="DepotPanel.cpp">
-      <Filter>Archivos de código fuente\HUD\Shop</Filter>
-    </ClCompile>
-    <ClCompile Include="ShopInfoPanel.cpp">
-      <Filter>Archivos de código fuente\HUD\Shop</Filter>
-    </ClCompile>
-    <ClCompile Include="Shop.cpp" />
-    <ClCompile Include="Game.cpp">
-      <Filter>Archivos de código fuente</Filter>
     <ClCompile Include="Bullet.cpp">
       <Filter>Archivos de código fuente\Objects\Bullets</Filter>
     </ClCompile>
@@ -333,12 +307,35 @@
     <ClCompile Include="BomberGun.cpp">
       <Filter>Archivos de código fuente\Guns</Filter>
     </ClCompile>
-    <ClCompile Include="GravityBombDebuff.cpp" />
     <ClCompile Include="Capsule.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
     <ClCompile Include="SpawnerEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies\SpawnerEnemies</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopInfoPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopItem.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopMenu.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="DepotPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="CatalogPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ButtonUI.cpp">
+      <Filter>Archivos de código fuente\HUD\UIElements</Filter>
+    </ClCompile>
+    <ClCompile Include="Shop.cpp">
+      <Filter>Archivos de código fuente\Objects\Interactables</Filter>
+    </ClCompile>
+    <ClCompile Include="GravityBombDebuff.cpp">
+      <Filter>Archivos de código fuente\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -555,6 +552,9 @@
     <ClInclude Include="BossPanel.h">
       <Filter>Archivos de encabezado\HUD\Panels</Filter>
     </ClInclude>
+    <ClInclude Include="PanelUI.h">
+      <Filter>Archivos de encabezado\HUD\Panels</Filter>
+    </ClInclude>
     <ClInclude Include="PlayerPanel.h">
       <Filter>Archivos de encabezado\HUD\Panels</Filter>
     </ClInclude>
@@ -592,12 +592,6 @@
       <Filter>Archivos de encabezado\HUD\UIElements</Filter>
     </ClInclude>
     <ClInclude Include="WeaponryViewer.h">
-      <Filter>Archivos de encabezado\HUD\UIElements</Filter>
-    </ClInclude>
-    <ClInclude Include="PanelUI.h">
-      <Filter>Archivos de encabezado\HUD\UIElements</Filter>
-    </ClInclude>
-    <ClInclude Include="ButtonUI.h">
       <Filter>Archivos de encabezado\HUD\UIElements</Filter>
     </ClInclude>
     <ClInclude Include="ImprovedShotgun.h">
@@ -669,22 +663,6 @@
     <ClInclude Include="CustomAnimatedSpriteComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
-    <ClInclude Include="CatalogPanel.h">
-      <Filter>Archivos de encabezado\HUD\Shop</Filter>
-    </ClInclude>
-    <ClInclude Include="DepotPanel.h">
-      <Filter>Archivos de encabezado\HUD\Shop</Filter>
-    </ClInclude>
-    <ClInclude Include="ShopItem.h">
-      <Filter>Archivos de encabezado\HUD\Shop</Filter>
-    </ClInclude>
-    <ClInclude Include="ShopMenu.h">
-      <Filter>Archivos de encabezado\HUD\Shop</Filter>
-    </ClInclude>
-    <ClInclude Include="ShopInfoPanel.h">
-      <Filter>Archivos de encabezado\HUD\Shop</Filter>
-    </ClInclude>
-    <ClInclude Include="Shop.h" />
     <ClInclude Include="PiercingBulletEffect.h">
       <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
     </ClInclude>
@@ -694,7 +672,6 @@
     <ClInclude Include="BomberGun.h">
       <Filter>Archivos de encabezado\Guns</Filter>
     </ClInclude>
-    <ClInclude Include="GravityBombDebuff.h" />
     <ClInclude Include="CapsuleDistance.h">
       <Filter>Archivos de encabezado\Objects\Enemies</Filter>
     </ClInclude>
@@ -706,6 +683,30 @@
     </ClInclude>
     <ClInclude Include="DistanceSpawner.h">
       <Filter>Archivos de encabezado\Objects\Enemies\SpawnerEnemies</Filter>
+    </ClInclude>
+    <ClInclude Include="ShopMenu.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="ShopItem.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="ShopInfoPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="CatalogPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="DepotPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="ButtonUI.h">
+      <Filter>Archivos de encabezado\HUD\UIElements</Filter>
+    </ClInclude>
+    <ClInclude Include="Shop.h">
+      <Filter>Archivos de encabezado\Objects\Interactables</Filter>
+    </ClInclude>
+    <ClInclude Include="GravityBombDebuff.h">
+      <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -857,10 +858,10 @@
       <UniqueIdentifier>{91c2fb3e-33b4-42c8-b741-0a0b383c9988}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de código fuente\HUD\Shop">
-      <UniqueIdentifier>{ebae936f-368d-444e-b7d4-3dd036956a60}</UniqueIdentifier>
+      <UniqueIdentifier>{82374948-29e9-45e7-a3a0-fd573588350b}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de encabezado\HUD\Shop">
-      <UniqueIdentifier>{f2b24fe9-2178-41a2-8a67-e3358ed43e3e}</UniqueIdentifier>
+      <UniqueIdentifier>{34784df1-da49-4c07-b58e-b2ba2d639505}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
