--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -307,12 +307,35 @@
     <ClCompile Include="BomberGun.cpp">
       <Filter>Archivos de código fuente\Guns</Filter>
     </ClCompile>
-    <ClCompile Include="GravityBombDebuff.cpp" />
     <ClCompile Include="Capsule.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
     <ClCompile Include="SpawnerEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies\SpawnerEnemies</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopInfoPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopItem.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ShopMenu.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="DepotPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="CatalogPanel.cpp">
+      <Filter>Archivos de código fuente\HUD\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ButtonUI.cpp">
+      <Filter>Archivos de código fuente\HUD\UIElements</Filter>
+    </ClCompile>
+    <ClCompile Include="Shop.cpp">
+      <Filter>Archivos de código fuente\Objects\Interactables</Filter>
+    </ClCompile>
+    <ClCompile Include="GravityBombDebuff.cpp">
+      <Filter>Archivos de código fuente\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -649,7 +672,6 @@
     <ClInclude Include="BomberGun.h">
       <Filter>Archivos de encabezado\Guns</Filter>
     </ClInclude>
-    <ClInclude Include="GravityBombDebuff.h" />
     <ClInclude Include="CapsuleDistance.h">
       <Filter>Archivos de encabezado\Objects\Enemies</Filter>
     </ClInclude>
@@ -661,6 +683,30 @@
     </ClInclude>
     <ClInclude Include="DistanceSpawner.h">
       <Filter>Archivos de encabezado\Objects\Enemies\SpawnerEnemies</Filter>
+    </ClInclude>
+    <ClInclude Include="ShopMenu.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="ShopItem.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="ShopInfoPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="CatalogPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="DepotPanel.h">
+      <Filter>Archivos de encabezado\HUD\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="ButtonUI.h">
+      <Filter>Archivos de encabezado\HUD\UIElements</Filter>
+    </ClInclude>
+    <ClInclude Include="Shop.h">
+      <Filter>Archivos de encabezado\Objects\Interactables</Filter>
+    </ClInclude>
+    <ClInclude Include="GravityBombDebuff.h">
+      <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -810,6 +856,12 @@
     </Filter>
     <Filter Include="Archivos de código fuente\Objects\Player\Melee">
       <UniqueIdentifier>{91c2fb3e-33b4-42c8-b741-0a0b383c9988}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código fuente\HUD\Shop">
+      <UniqueIdentifier>{82374948-29e9-45e7-a3a0-fd573588350b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\HUD\Shop">
+      <UniqueIdentifier>{34784df1-da49-4c07-b58e-b2ba2d639505}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
