--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -313,11 +313,6 @@
     <ClCompile Include="SpawnerEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies\SpawnerEnemies</Filter>
     </ClCompile>
-    <ClCompile Include="GravityBombDebuff.cpp">
-      <Filter>Archivos de código fuente\Objects\Bullets\Effects</Filter>
-    </ClCompile>
-    <ClCompile Include="StaticFlyingEnemy.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\DistanceEnemies</Filter>
     <ClCompile Include="ShopInfoPanel.cpp">
       <Filter>Archivos de código fuente\HUD\Shop</Filter>
     </ClCompile>
@@ -341,6 +336,9 @@
     </ClCompile>
     <ClCompile Include="GravityBombDebuff.cpp">
       <Filter>Archivos de código fuente\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="StaticFlyingEnemy.cpp">
+      <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -689,11 +687,6 @@
     <ClInclude Include="DistanceSpawner.h">
       <Filter>Archivos de encabezado\Objects\Enemies\SpawnerEnemies</Filter>
     </ClInclude>
-    <ClInclude Include="GravityBombDebuff.h">
-      <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
-    </ClInclude>
-    <ClInclude Include="StaticFlyingEnemy.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\DistanceEnemies</Filter>
     <ClInclude Include="ShopMenu.h">
       <Filter>Archivos de encabezado\HUD\Shop</Filter>
     </ClInclude>
@@ -717,6 +710,9 @@
     </ClInclude>
     <ClInclude Include="GravityBombDebuff.h">
       <Filter>Archivos de encabezado\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticFlyingEnemy.h">
+      <Filter>Archivos de encabezado\Objects\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
