Empezado cutScene y creado el DialogueEvent (con basura)

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -137,13 +137,16 @@
     <ClCompile Include="AmmoViewer.cpp" />
     <ClCompile Include="AnimatedImageUI.cpp" />
     <ClCompile Include="ButtonUI.cpp" />
+    <ClCompile Include="CutScene.cpp" />
     <ClCompile Include="DepotPanel.cpp" />
     <ClCompile Include="BomberGun.cpp" />
     <ClCompile Include="BossOrbCannon.cpp" />
     <ClCompile Include="BulletEffect.cpp" />
+    <ClCompile Include="DialogueEvent.cpp" />
     <ClCompile Include="EffectInterface.cpp" />
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Capsule.cpp" />
+    <ClCompile Include="Event.cpp" />
     <ClCompile Include="FramedImageUI.cpp" />
     <ClCompile Include="AnimatedSpriteComponent.cpp" />
     <ClCompile Include="Arm.cpp" />
@@ -169,6 +172,7 @@
     <ClCompile Include="GravityBombDebuff.cpp" />
     <ClCompile Include="GravityBulletEffect.cpp" />
     <ClCompile Include="Interactable.cpp" />
+    <ClCompile Include="MoveEvent.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="ImprovedRifle.cpp" />
     <ClCompile Include="ImprovedShotgun.cpp" />
@@ -254,15 +258,18 @@
     <ClInclude Include="AmmoViewer.h" />
     <ClInclude Include="AnimatedImageUI.h" />
     <ClInclude Include="ButtonUI.h" />
+    <ClInclude Include="CutScene.h" />
     <ClInclude Include="DepotPanel.h" />
     <ClInclude Include="BomberGun.h" />
     <ClInclude Include="BossOrbCannon.h" />
     <ClInclude Include="BulletEffect.h" />
+    <ClInclude Include="DialogueEvent.h" />
     <ClInclude Include="EffectInterface.h" />
     <ClInclude Include="Boss.h" />
     <ClInclude Include="CapsuleDistance.h" />
     <ClInclude Include="CapsuleNormal.h" />
     <ClInclude Include="DistanceSpawner.h" />
+    <ClInclude Include="Event.h" />
     <ClInclude Include="FramedImageUI.h" />
     <ClInclude Include="AnimatedSpriteComponent.h" />
     <ClInclude Include="AnyarothError.h" />
@@ -298,6 +305,7 @@
     <ClInclude Include="ExplosiveBulletEffect.h" />
     <ClInclude Include="FlyingEnemy.h" />
     <ClInclude Include="MisilBoss1.h" />
+    <ClInclude Include="MoveEvent.h" />
     <ClInclude Include="MovingComponent.h" />
     <ClInclude Include="NormalSpawner.h" />
     <ClInclude Include="NPC.h" />
