--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -349,6 +349,7 @@
     <ClCompile Include="Tilemap.cpp">
       <Filter>Archivos de código fuente\Objects\Level</Filter>
     </ClCompile>
+    <ClCompile Include="GameManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -732,6 +733,7 @@
     <ClInclude Include="Tilemap.h">
       <Filter>Archivos de encabezado\Objects\Level</Filter>
     </ClInclude>
+    <ClInclude Include="GameManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de código fuente">
