--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -357,6 +357,9 @@
     <ClCompile Include="MoveEvent.cpp" />
     <ClCompile Include="DialogueEvent.cpp" />
     <ClCompile Include="waitEvent.cpp" />
+    <ClCompile Include="ZoomInOutEvent.cpp" />
+    <ClCompile Include="FadeInOut.cpp" />
+    <ClCompile Include="ShakeEvent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -748,6 +751,10 @@
     <ClInclude Include="MoveEvent.h" />
     <ClInclude Include="DialogueEvent.h" />
     <ClInclude Include="waitEvent.h" />
+    <ClInclude Include="CamEffectType.h" />
+    <ClInclude Include="ZoomInOutEvent.h" />
+    <ClInclude Include="FadeInOut.h" />
+    <ClInclude Include="ShakeEvent.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de código fuente">
