--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -147,7 +147,7 @@
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Capsule.cpp" />
     <ClCompile Include="Event.cpp" />
-    <ClCompile Include="FadeInOut.cpp" />
+    <ClCompile Include="FadeInOutEvent.cpp" />
     <ClCompile Include="FramedImageUI.cpp" />
     <ClCompile Include="AnimatedSpriteComponent.cpp" />
     <ClCompile Include="Arm.cpp" />
@@ -275,7 +275,7 @@
     <ClInclude Include="CapsuleNormal.h" />
     <ClInclude Include="DistanceSpawner.h" />
     <ClInclude Include="Event.h" />
-    <ClInclude Include="FadeInOut.h" />
+    <ClInclude Include="FadeInOutEvent.h" />
     <ClInclude Include="FramedImageUI.h" />
     <ClInclude Include="AnimatedSpriteComponent.h" />
     <ClInclude Include="AnyarothError.h" />
