--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -233,6 +233,7 @@
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="ShakeEvent.cpp" />
     <ClCompile Include="Shop.cpp" />
+    <ClCompile Include="ShopEvent.cpp" />
     <ClCompile Include="ShopInfoPanel.cpp" />
     <ClCompile Include="ShopMenu.cpp" />
     <ClCompile Include="ShopItem.cpp" />
@@ -371,6 +372,7 @@
     <ClInclude Include="SDLError.h" />
     <ClInclude Include="ShakeEvent.h" />
     <ClInclude Include="Shop.h" />
+    <ClInclude Include="ShopEvent.h" />
     <ClInclude Include="ShopInfoPanel.h" />
     <ClInclude Include="ShopMenu.h" />
     <ClInclude Include="ShopItem.h" />
